tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/table/equals-sign.stderr
TOML parse error at line 1, column 6
  |
1 | [name=bad]
  |      ^
invalid table header
expected `.`, `]`
